# pumpsaver-ir-protocol

./: .gitignore  LICENSE  MANIFEST.in  PROTOCOL.md  README.md  REPRODUCIBILITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-submit-capture.yml  02-register-identification.yml  config.yml
.github/workflows/: ci.yml
examples/: sample_capture.ndjson
pumpsaver_ir/: __init__.py  __main__.py  decoder.py  registers.json
reproducibility/: extended-analysis.sha256  public-corpus.json
tests/: test_decoder.py
tools/: corpus_report.py
