[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pumpsaver-ir"
version = "0.1.0"
description = "Decoder for the SymCom/Littelfuse PumpSaver Plus IR register broadcast"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Home Automation",
]

[project.scripts]
pumpsaver-ir = "pumpsaver_ir.__main__:main"

[tool.setuptools]
packages = ["pumpsaver_ir"]

[tool.setuptools.package-data]
pumpsaver_ir = ["registers.json"]
